--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "@google/generative-ai": "^0.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.3",
-    "nodemon": "^3.1.4"
+    "node-mailjet": "^6.0.5",
+    "nodemon": "^3.1.4",
+    "twitter-api-v2": "^1.17.1"
   }
 }
