--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.4",
     "path": "^0.12.7",
+    "twitter-api-v2": "^1.17.1",
     "uuid": "^10.0.0"
   }
 }
