--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@google/generative-ai": "^0.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "nodemailer": "^6.9.14",
     "mongoose": "^8.4.3",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "path": "^0.12.7",
     "twitter-api-v2": "^1.17.1",
